src/snapshots/tptp__fof__tests__fof_formula-14.snap
---
source: src/fof.rs
expression: parsed
snapshot_kind: text
---
[]-->[(![X,Y,Z]:?[Q]:Q!=p(A))&p&(q=>r)]
