src/snapshots/tptp__fof__tests__fof_formula-15.snap
---
source: src/fof.rs
expression: parsed
snapshot_kind: text
---
Sequent(
    LogicSequent {
        left: ListFormula(
            [
                Binary(
                    Assoc(
                        And(
                            AndFormula(
                                [
                                    Unitary(
                                        Atomic(
                                            Plain(
                                                PlainAtomicFormula(
                                                    Constant(
                                                        Constant(
                                                            Functor(
                                                                Lower(
                                                                    LowerWord(
                                                                        "p",
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                    Unitary(
                                        Atomic(
                                            Plain(
                                                PlainAtomicFormula(
                                                    Constant(
                                                        Constant(
                                                            Functor(
                                                                Lower(
                                                                    LowerWord(
                                                                        "q",
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                        ),
                    ),
                ),
                Unitary(
                    Atomic(
                        Plain(
                            PlainAtomicFormula(
                                Constant(
                                    Constant(
                                        Functor(
                                            Lower(
                                                LowerWord(
                                                    "r",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ],
        ),
        right: ListFormula(
            [],
        ),
    },
)
