src/snapshots/tptp__fof__tests__fof_formula-17.snap
---
source: src/fof.rs
expression: parsed
snapshot_kind: text
---
Sequent(
    LogicSequent {
        left: ListFormula(
            [
                Binary(
                    Assoc(
                        And(
                            AndFormula(
                                [
                                    Unitary(
                                        Parenthesised(
                                            Unitary(
                                                Quantified(
                                                    QuantifiedFormula {
                                                        quantifier: Forall,
                                                        bound: VariableList(
                                                            [
                                                                Variable(
                                                                    UpperWord(
                                                                        "X",
                                                                    ),
                                                                ),
                                                                Variable(
                                                                    UpperWord(
                                                                        "Y",
                                                                    ),
                                                                ),
                                                                Variable(
                                                                    UpperWord(
                                                                        "Z",
                                                                    ),
                                                                ),
                                                            ],
                                                        ),
                                                        formula: Unitary(
                                                            Quantified(
                                                                QuantifiedFormula {
                                                                    quantifier: Exists,
                                                                    bound: VariableList(
                                                                        [
                                                                            Variable(
                                                                                UpperWord(
                                                                                    "Q",
                                                                                ),
                                                                            ),
                                                                        ],
                                                                    ),
                                                                    formula: Unary(
                                                                        InfixUnary(
                                                                            InfixUnary {
                                                                                left: Variable(
                                                                                    Variable(
                                                                                        UpperWord(
                                                                                            "Q",
                                                                                        ),
                                                                                    ),
                                                                                ),
                                                                                op: InfixInequality,
                                                                                right: Function(
                                                                                    Plain(
                                                                                        Function(
                                                                                            Functor(
                                                                                                Lower(
                                                                                                    LowerWord(
                                                                                                        "p",
                                                                                                    ),
                                                                                                ),
                                                                                            ),
                                                                                            Arguments(
                                                                                                [
                                                                                                    Variable(
                                                                                                        Variable(
                                                                                                            UpperWord(
                                                                                                                "A",
                                                                                                            ),
                                                                                                        ),
                                                                                                    ),
                                                                                                ],
                                                                                            ),
                                                                                        ),
                                                                                    ),
                                                                                ),
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ),
                                            ),
                                        ),
                                    ),
                                    Unitary(
                                        Atomic(
                                            Plain(
                                                PlainAtomicFormula(
                                                    Constant(
                                                        Constant(
                                                            Functor(
                                                                Lower(
                                                                    LowerWord(
                                                                        "p",
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                    Unitary(
                                        Parenthesised(
                                            Binary(
                                                Nonassoc(
                                                    BinaryNonassoc {
                                                        left: Unitary(
                                                            Atomic(
                                                                Plain(
                                                                    PlainAtomicFormula(
                                                                        Constant(
                                                                            Constant(
                                                                                Functor(
                                                                                    Lower(
                                                                                        LowerWord(
                                                                                            "q",
                                                                                        ),
                                                                                    ),
                                                                                ),
                                                                            ),
                                                                        ),
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                        op: LRImplies,
                                                        right: Unitary(
                                                            Atomic(
                                                                Plain(
                                                                    PlainAtomicFormula(
                                                                        Constant(
                                                                            Constant(
                                                                                Functor(
                                                                                    Lower(
                                                                                        LowerWord(
                                                                                            "r",
                                                                                        ),
                                                                                    ),
                                                                                ),
                                                                            ),
                                                                        ),
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    },
                                                ),
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                        ),
                    ),
                ),
            ],
        ),
        right: ListFormula(
            [
                Binary(
                    Assoc(
                        And(
                            AndFormula(
                                [
                                    Unitary(
                                        Atomic(
                                            Plain(
                                                PlainAtomicFormula(
                                                    Constant(
                                                        Constant(
                                                            Functor(
                                                                Lower(
                                                                    LowerWord(
                                                                        "p",
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                    Unitary(
                                        Atomic(
                                            Plain(
                                                PlainAtomicFormula(
                                                    Constant(
                                                        Constant(
                                                            Functor(
                                                                Lower(
                                                                    LowerWord(
                                                                        "q",
                                                                    ),
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                        ),
                    ),
                ),
                Unary(
                    Unary(
                        UnaryConnective,
                        Unitary(
                            Atomic(
                                Plain(
                                    PlainAtomicFormula(
                                        Constant(
                                            Constant(
                                                Functor(
                                                    Lower(
                                                        LowerWord(
                                                            "p",
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ],
        ),
    },
)
