src/snapshots/tptp__fof__tests__fof_formula-5.snap
---
source: src/fof.rs
expression: parsed
---
Logic(
    Unitary(
        Parenthesised(
            Unitary(
                Atomic(
                    Plain(
                        PlainAtomicFormula(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "p",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
